--- a/lesson_1/1_intro.ipynb
+++ b/lesson_1/1_intro.ipynb
@@ -80,7 +80,7 @@
    "source": [
     "2)\tЛогические переменные (Boolean Type)\n",
     "\n",
-    "Логические переменные как бы «проверяют» наши данные на соответствие условию, которое мы задаем (для этого нужно использовать символ \"==\", сперва пишем данные, потом \"==\", затем условие). Если данные соответствуют этому условию, то система выдаст “True”, а если нет – “False”. Также мы использовать и другие типы данных, которые будут интерпретироваться системой, как ложные. Например, число 0, пустые списки, множества, словари, кортежи и объекты None будут равноценны \"False\". Для того, чтобы проверить истинность переменной (или любого другого объекта, с которым мы работаем), можно использовать функцией \"bool()\", а для сравнения использовать знаки \"<\" - менее, и \">\" - более.  \n"
+    "Логические переменные как бы «проверяют» наши данные на соответствие условию, которое мы задаем (для этого нужно использовать символ \"==\", сперва пишем данные, потом \"==\", затем условие). Если данные соответствуют этому условию, то система выдаст “True”, а если нет – “False”. Также мы можем использовать и другие типы данных, которые будут интерпретироваться системой, как ложные. Например, число 0, пустые списки, множества, словари, кортежи и объекты None будут равноценны \"False\". Для того, чтобы проверить истинность переменной (или любого другого объекта, с которым мы работаем), можно использовать функцией \"bool()\", а для сравнения использовать знаки \"<\" - менее, и \">\" - более.  \n"
    ]
   },
   {
